--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "path": "^0.12.7",
+    "resend": "^6.6.0",
     "xlsx": "^0.18.5"
   }
 }
