--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^7.0.11",
     "path": "^0.12.7",
     "resend": "^6.6.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "xlsx": "^0.18.5"
   }
 }
