--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.958.0",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.65.1",
     "cloudinary": "^2.8.0",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^7.0.11",
     "path": "^0.12.7",
     "resend": "^6.6.0",
